--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,9 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - ravikrcsia
 
 repo_description_lines_max: 2
 
 github_repos:
   - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - eYantra-Robotics-Competition/eYRC-2023_Cosmo_Logistic
+
